# matmul

./: CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt  Passes.h  Passes.td  SuprasFirstPass.cpp
tests/: matmul1.mlir  matmul2.mlir  matmul3.mlir  matmul4.mlir  matmul5.mlir
tool/: CMakeLists.txt  suprasfirstpass-opt.cpp
